feat: remove use of Java 9 functionality
OCD-2973